--- a/css/feel.css
+++ b/css/feel.css
@@ -6,6 +6,16 @@
   flex-wrap: wrap;
 }
 
+@keyframes big {
+  from {
+    transform: scale(0);
+  }
+
+  to {
+    transform: scale(1);
+  }
+}
+
 .feel_form button {
   width: 120px;
   height: 30px;
@@ -18,8 +28,15 @@
   font-weight: 700;
   color: var(--welcome-font-color);
   transition: all 0.2s linear;
+  animation: big 0.7s linear;
 }
 
 .feel_form button:hover {
   transform: scale(1.2);
+}
+
+.feel_form button:focus {
+  box-shadow: 1px 1px 5px 2px rgba(0, 62, 16, 0.5) inset;
+  background-color: var(--welcome-light-color);
+  color: var(--welcome-font-color);
 }
