--- a/css/welcome.css
+++ b/css/welcome.css
@@ -1,5 +1,6 @@
 .welcome_all_body {
   display: flex;
+  flex-direction: column;
   height: 100vh;
   justify-content: center;
   align-items: center;
