--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url("reset.css");
 @import url("css/welcome.css");
 @import url("css/feel.css");
+@import url("css/main.css");
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800&family=Oleo+Script+Swash+Caps&display=swap");
 
 body * {
