--- a/css/main.css
+++ b/css/main.css
@@ -31,11 +31,49 @@
   height: 200px;
 }
 
+/*high-profile*/
 .main_high-profile-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 200px;
-  background-color: aliceblue;
+  background-color: #cbd3bd;
+  padding-top: 30px;
+  box-sizing: border-box;
+  border: 7px solid var(--welcome-font-color);
+  box-shadow: 2px 2px 10px var(--welcome-font-color);
 }
 
+.main_high-profile-img-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: white;
+  box-shadow: 2px 2px 10px var(--welcome-font-color);
+}
+
+.main_high-profile-img-box {
+  font-size: 50px;
+}
+
+.main_high-profile-name-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80px;
+  height: 35px;
+  border-bottom: 3px solid var(--welcome-font-color);
+}
+.main_high-profile-name-box p {
+  font-size: 17px;
+  font-weight: 800;
+  color: var(--welcome-font-color);
+}
+
+/*high-time*/
 .main_high-time-day-box {
   width: 300px;
   background-color: aliceblue;
@@ -76,8 +114,7 @@
   width: 650px;
 }
 
-.main_low-right-box{
-    background-color: aliceblue;
+.main_low-right-box {
+  background-color: aliceblue;
   width: 150px;
-}
 }
