--- a/css/main-high.css
+++ b/css/main-high.css
@@ -44,6 +44,8 @@
   width: 80px;
   height: 35px;
   border-bottom: 3px solid var(--welcome-font-color);
+  margin-top: 10px;
+  box-sizing: border-box;
 }
 .main_high-profile-name-box h1 {
   font-size: 17px;
