--- a/css/main-high.css
+++ b/css/main-high.css
@@ -15,7 +15,7 @@
   flex-direction: column;
   align-items: center;
   width: 160px;
-  background-color: #cbd3bd;
+  background-color: var(--main-background-color);
   padding-top: 30px;
   box-sizing: border-box;
   border: 7px solid var(--welcome-font-color);
@@ -49,7 +49,7 @@
 }
 .main_high-profile-name-box h1 {
   font-size: 17px;
-  font-weight: 800;
+  font-weight: 600;
   color: var(--welcome-font-color);
 }
 
@@ -65,7 +65,6 @@
   width: 100%;
   height: 90px;
   border-radius: 10px;
-  background-color: darkgoldenrod;
 }
 
 .main_high-time-box {
@@ -76,11 +75,56 @@
   font-weight: 700;
   color: var(--welcome-font-color);
   background-color: #ffffff;
-  border: 20px solid #e8e7e3;
+  border: 20px solid var(--main-background-color);
   box-sizing: border-box;
   box-shadow: 2px 2px 10px var(--welcome-font-color);
 }
 
+/*hight-day*/
+.main_high-day-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 40px;
+  box-sizing: border-box;
+  background-color: var(--welcome-font-color);
+  box-shadow: 2px 2px 10px var(--welcome-font-color);
+}
+
+.main_high-month-date-box {
+  display: flex;
+  flex-direction: column;
+  width: 70px;
+  height: 60px;
+  background-color: var(--main-background-color);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+}
+
+.main_high-day {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20px;
+  background-color: var(--welcome-light-color);
+  color: white;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  font-size: 13px;
+  font-weight: 400;
+}
+
+.main_high-day-common {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: 800;
+  position: relative;
+  bottom: -8px;
+  color: var(--welcome-font-color);
+}
 /*high-music*/
 .main_high-music-box {
   width: 510px;
