--- a/style.css
+++ b/style.css
@@ -28,4 +28,5 @@ body * {
   --welcomebackgroud-color: #f3f2ed;
   --welcome-font-color: #455d3e;
   --welcome-light-color: #ced2c7;
+  --main-background-color: #e8e7e3;
 }
