--- a/css/main-high.css
+++ b/css/main-high.css
@@ -127,41 +127,127 @@
 }
 /*high-music*/
 .main_high-music-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 510px;
-  background-color: aliceblue;
+  background: linear-gradient(
+    var(--welcome-font-color),
+    var(--welcome-light-color)
+  );
+  box-shadow: 2px 2px 10px var(--welcome-font-color);
 }
 
-/*middle*/
-.main_middle {
-  height: 30px;
-  width: 100%;
-  border-radius: 10px;
-  background-color: aliceblue;
-  margin: 20px 0;
-}
-
-/*low*/
-.main_low {
+.music-container {
   display: flex;
   justify-content: space-between;
+  padding: 0 50px;
+  box-sizing: border-box;
+  width: 350px;
+  height: 80px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  position: relative;
+  bottom: -35px;
+  box-shadow: 2px 2px 10px var(--welcome-font-color);
 }
 
-.main_low-box-common {
-  height: 230px;
+.music-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 10px 10px 15px 140px;
+  box-sizing: border-box;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.2);
+  width: 310px;
+  height: 70px;
+  top: 0;
+  left: 20px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  transform: translateY(-100%);
+}
+
+.music-title {
+  font-size: 20px;
+  font-weight: 800;
+  color: var(--main-background-color);
+}
+
+.music-progress-container {
+  width: 150px;
+  height: 4px;
+  background-color: var(--main-background-color);
   border-radius: 10px;
 }
 
-.main_low-left-box {
-  background-color: aliceblue;
-  width: 200px;
+.music-progress {
+  background-color: var(--welcome-font-color);
+  border-radius: 10px;
+  height: 100%;
+  width: 0%;
+  transition: width 0.1s linear;
 }
 
-.main_low-memo-box {
-  background-color: aliceblue;
-  width: 570px;
+.music-img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  position: relative;
+  top: -30px;
+  box-shadow: 2px 2px 10px var(--welcome-font-color);
+  border: 2px solid white;
+  box-sizing: border-box;
+
+  animation: music-focus 3s linear infinite;
+
+  animation-play-state: paused;
 }
 
-.main_low-right-box {
-  background-color: aliceblue;
-  width: 150px;
+.music-img-container {
+  position: relative;
+}
+
+.music-img-container::after {
+  content: "";
+  background-color: #ffffff;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  left: 50%;
+  bottom: 50%;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.music-btn {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  bottom: -15px;
+  left: -50px;
+  border: 0;
+  background-color: #ffffff;
+  color: var(--welcome-font-color);
+  font-size: 30px;
+  cursor: pointer;
+  transition: all 0.2s linear;
+}
+
+.music-btn:hover {
+  transform: scale(1.3);
+}
+
+@keyframes music-focus {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.music-container.play .music-img {
+  animation-play-state: running;
 }
