--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
+/*reset*/
 @import url("reset.css");
+
+/*index*/
 @import url("css/welcome.css");
 @import url("css/feel.css");
+
+/*main*/
 @import url("css/main.css");
 @import url("css/main-high.css");
+@import url("css/main-middle.css");
+@import url("css/main-low.css");
+
+/*font*/
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800&family=Oleo+Script+Swash+Caps&display=swap");
 @font-face {
   font-family: "LAB디지털";
