--- a/css/main-middle.css
+++ b/css/main-middle.css
@@ -1,8 +1,93 @@
 /*middle*/
 .main_middle {
-  height: 30px;
+  display: flex;
+  align-items: center;
+  height: 40px;
   width: 100%;
   border-radius: 10px;
-  background-color: aliceblue;
+  background-color: var(--welcome-font-color);
+  box-shadow: 2px 2px 10px var(--welcome-font-color);
   margin: 20px 0;
+}
+
+.main_middle-box {
+  width: 10%;
+  display: flex;
+  justify-content: center;
+}
+
+.main_middle-text-box {
+  width: 80%;
+  text-align: center;
+}
+
+.main_middle-text {
+  font-size: 13px;
+  font-weight: 600;
+  color: var(--main-background-color);
+}
+
+.main_middle-box-icon {
+  position: relative;
+}
+
+.main_middle-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid var(--welcome-font-color);
+  background-color: var(--main-background-color);
+  color: var(--welcome-font-color);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  transition: all 0.2s linear;
+}
+.main_middle-icon:hover {
+  transform: scale(1.3);
+}
+
+.main_middle-box-icon::after {
+  content: "새로고침하면 새로운 노래와 글귀가 나와요!";
+  color: var(--welcome-font-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: -10px;
+  left: -450px;
+  width: 400px;
+  height: 50px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
+  border: 4px solid var(--welcome-font-color);
+  box-sizing: border-box;
+  font-size: 13px;
+  font-weight: 600;
+  opacity: 0;
+}
+
+.main_middle-icon-right {
+  position: relative;
+}
+
+.main_middle-icon-right:after {
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  border: 10px solid transparent;
+  border-left-color: rgba(255, 255, 255, 0.7);
+  left: -50px;
+  top: 4px;
+  opacity: 0;
+}
+
+.main_middle-icon:hover + .main_middle-box-icon::after {
+  opacity: 1;
+}
+
+.main_middle-icon:hover ~ .main_middle-icon-right:after {
+  opacity: 1;
 }
