--- a/css/main-high.css
+++ b/css/main-high.css
@@ -148,11 +148,11 @@
   padding: 0 50px;
   box-sizing: border-box;
   width: 350px;
-  height: 80px;
+  height: 60px;
   background-color: #ffffff;
   border-radius: 10px;
   position: relative;
-  bottom: -35px;
+  bottom: -40px;
   box-shadow: 2px 2px 25px var(--welcome-font-color);
 }
 
@@ -165,7 +165,7 @@
   position: absolute;
   background-color: rgba(255, 255, 255, 0.2);
   width: 310px;
-  height: 70px;
+  height: 90px;
   top: 0;
   left: 20px;
   border-top-left-radius: 10px;
@@ -182,9 +182,8 @@
 .music-text {
   font-size: 8px;
   font-weight: 300;
+  padding-top: 10px;
   color: var(--main-background-color);
-  position: relative;
-  top: -4px;
 }
 
 .music-progress-container {
@@ -208,10 +207,11 @@
   height: 100px;
   border-radius: 50%;
   position: relative;
-  top: -30px;
+  top: -50px;
   box-shadow: 2px 2px 10px var(--welcome-font-color);
   border: 2px solid white;
   box-sizing: border-box;
+  object-fit: cover;
 
   animation: music-focus 3s linear infinite;
 
@@ -228,8 +228,8 @@
   width: 20px;
   height: 20px;
   position: absolute;
-  left: 50%;
-  bottom: 50%;
+  left: 50px;
+  bottom: 40px;
   border-radius: 50%;
   transform: translate(-50%, -50%);
 }
@@ -238,7 +238,7 @@
   width: 30px;
   height: 30px;
   position: relative;
-  bottom: -15px;
+  bottom: -8px;
   left: -50px;
   border: 0;
   background-color: #ffffff;
