--- a/css/main-low.css
+++ b/css/main-low.css
@@ -9,16 +9,76 @@
   border-radius: 10px;
 }
 
+/*low-left*/
 .main_low-left-box {
-  background-color: aliceblue;
-  width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 150px;
 }
 
+.main_low-left-img {
+  width: 150px;
+  height: 150px;
+  box-sizing: border-box;
+  border: 10px solid var(--welcome-font-color);
+  border-radius: 5px;
+  box-shadow: 2px 2px 10px var(--welcome-font-color);
+}
+
+.main_low-left-logout {
+  width: 120px;
+  height: 50px;
+  background-color: var(--welcome-light-color);
+  border-radius: 10px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: 600;
+  color: var(--welcome-font-color);
+  border: 4px solid var(--welcome-font-color);
+  box-sizing: border-box;
+  animation: logout-box 3s linear infinite;
+  box-shadow: 2px 2px 10px var(--welcome-font-color);
+}
+
+.main_low-left-logout:after {
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  border: 10px solid transparent;
+  border-bottom-color: var(--welcome-font-color);
+  top: -20px;
+  right: 50px;
+}
+
+.main_low-left-logout-i {
+  font-size: 15px;
+}
+
+@keyframes logout-box {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+/*low-memo*/
 .main_low-memo-box {
   background-color: aliceblue;
-  width: 570px;
+  width: 620px;
 }
 
+/*low-right*/
 .main_low-right-box {
   background-color: aliceblue;
   width: 150px;
