--- a/css/main-high.css
+++ b/css/main-high.css
@@ -19,7 +19,8 @@
   padding-top: 30px;
   box-sizing: border-box;
   border: 7px solid var(--welcome-font-color);
-  box-shadow: 2px 2px 10px var(--welcome-font-color);
+  box-shadow: 2px 2px 10px var(--welcome-font-color),
+    2px 2px 5px 2px rgba(117, 117, 117, 0.5) inset;
 }
 
 .main_high-profile-img-box {
