--- a/css/main-low.css
+++ b/css/main-low.css
@@ -42,7 +42,8 @@
   border: 4px solid var(--welcome-font-color);
   box-sizing: border-box;
   animation: logout-box 3s linear infinite;
-  box-shadow: 2px 2px 10px var(--welcome-font-color);
+  box-shadow: 2px 2px 10px var(--welcome-font-color),
+    2px 2px 5px 2px rgba(117, 117, 117, 0.5) inset;
 }
 
 .main_low-left-logout:after {
@@ -92,6 +93,7 @@
   color: var(--main-background-color);
   font-size: 20px;
   font-weight: 600;
+  text-shadow: 3px 3px 12px rgba(0, 0, 0, 0.5);
 }
 
 .main_low-memo-right {
@@ -101,6 +103,7 @@
   border: 4px solid var(--welcome-font-color);
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
+  box-sizing: border-box;
 }
 
 .main_low-memo-form {
@@ -124,7 +127,6 @@
   font-weight: 600;
   color: var(--welcome-font-color);
   outline: none;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 }
 
 .main_low-memo-input::placeholder {
@@ -154,6 +156,8 @@
   height: 100%;
   overflow: auto;
   border-bottom-right-radius: 10px;
+  box-shadow: 2px 2px 5px 2px rgba(117, 117, 117, 0.5) inset,
+    -2px -2px 5px 2px rgba(117, 117, 117, 0.5) inset;
 }
 
 .main_low-memo-list {
