--- a/css/main-low.css
+++ b/css/main-low.css
@@ -100,7 +100,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  border: 4px solid var(--welcome-font-color);
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   box-sizing: border-box;
@@ -112,7 +111,8 @@
   align-items: center;
   width: 100%;
   height: 70px;
-  padding: 0 30px;
+  padding: 20px 30px 10px 30px;
+  border-top-right-radius: 5px;
   box-sizing: border-box;
   background-color: var(--welcome-font-color);
 }
@@ -152,6 +152,7 @@
   width: 100%;
   padding: 20px 30px;
   box-sizing: border-box;
+  border: 5px solid var(--welcome-font-color);
   background-color: var(--main-background-color);
   height: 100%;
   overflow: auto;
