--- a/css/main-low.css
+++ b/css/main-low.css
@@ -216,6 +216,30 @@
 }
 /*low-right*/
 .main_low-right-box {
-  background-color: aliceblue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 0;
+  box-sizing: border-box;
+
   width: 150px;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.weather {
+  font-size: 80px;
+  color: var(--welcome-font-color);
+}
+
+.temp {
+  font-size: 30px;
+  position: relative;
+  top: -10px;
+  font-weight: 600;
+  color: var(--welcome-font-color);
+}
+.city {
+  font-size: 20px;
+  color: var(--welcome-font-color);
 }
