--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@
   font-style: normal;
 }
 
+body {
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 body * {
   font-family: " Nunito", sans-serif;
 }
