--- a/style.css
+++ b/style.css
@@ -22,8 +22,9 @@
 }
 
 body {
-  background-repeat: no-repeat;
-  background-size: cover;
+  width: 100%;
+  height: 100%;
+  background: black;
 }
 
 body * {
