--- a/css/welcome.css
+++ b/css/welcome.css
@@ -1,6 +1,7 @@
 .welcome_all_body {
   display: flex;
   flex-direction: column;
+  width: 100%;
   height: 100vh;
   justify-content: center;
   align-items: center;
