--- a/css/welcome.css
+++ b/css/welcome.css
@@ -1,10 +1,12 @@
 .welcome_all_body {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: 100vh;
   justify-content: center;
   align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background: black;
+  box-sizing: border-box;
   background: #34e89e; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
