--- a/css/welcome.css
+++ b/css/welcome.css
@@ -5,29 +5,20 @@
   align-items: center;
   width: 100vw;
   height: 100vh;
-  background: black;
-  box-sizing: border-box;
-  background: #34e89e; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #34e89e,
-    #0f3443
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #34e89e,
-    #0f3443
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, #34e89e, #0f3443);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .welcome_body {
+  width: 80%;
+  height: 280px;
+  box-sizing: border-box;
+  background-color: var(--welcomebackgroud-color);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  background-color: var(--welcomebackgroud-color);
-  width: 700px;
-  height: 300px;
   border-radius: 40px;
   box-shadow: 15px 15px 35px 10px rgba(0, 0, 0, 0.2);
   outline: 2px solid var(--welcome-light-color);
