--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
-  width: 100%;
+  min-width: 1100px;
 }
 
 .main_body {
@@ -13,10 +13,10 @@
 }
 
 .main_backgroud {
+  margin: 0 auto;
   width: 1000px;
   height: 500px;
   background-color: rgb(255, 255, 255, 0.5);
   border-radius: 20px;
   padding: 40px;
-  object-fit: cover;
 }
