--- a/css/welcome.css
+++ b/css/welcome.css
@@ -34,8 +34,8 @@
 
 @media screen and (max-width: 1001px) {
   .welcome_body {
-    width: 80%;
-    height: 280px;
+    width: 700px;
+    height: 300px;
   }
 }
 
